<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="-50dp"
        android:layout_marginRight="-200dp"
        android:alpha="0.9"
        android:background="@mipmap/bg_login"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="380dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:typeface="monospace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintBottom_toBottomOf="parent" />


    <EditText
        android:id="@+id/et_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_rc_ed_public_service_search"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="30dp"
        android:imeOptions="flagNoExtractUi"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_rc_ed_public_service_search"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_login_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/select_btn_blue"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:enabled="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_marginBottom="30dp"
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/new_user"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>