<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="-50dp"
        android:layout_marginRight="-200dp"
        android:alpha="0.9"
        android:background="@mipmap/bg_regist"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <EditText
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/et_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_rc_ed_public_service_search"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_marginTop="10dp"
        android:maxLength="6"
        android:id="@+id/et_login_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/et_login_phone"
        android:layout_marginRight="140dp"
        android:background="@drawable/selector_rc_ed_public_service_search"
        android:hint="@string/confirmation"
        android:inputType="number"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <Button
        android:id="@+id/btn_get_confirmation"
        app:layout_constraintLeft_toRightOf="@+id/et_login_confirmation"
        app:layout_constraintBottom_toBottomOf="@id/et_login_confirmation"
        app:layout_constraintRight_toRightOf="@+id/et_login_phone"
        android:background="@drawable/select_btn_blue"
        android:text="@string/get_confirmation"
        android:enabled="false"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="50dp" />


    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/et_login_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_rc_ed_public_service_search"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/et_login_confirmation"
        android:focusableInTouchMode="true"
        android:hint="@string/nick_name"
        android:maxLength="11"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_rc_ed_public_service_search"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:maxLength="16"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/et_login_nickname"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_login_commit"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/select_btn_blue"
        android:text="@string/regist"
        android:textColor="#FFFFFF"
        android:enabled="false"
        android:textSize="18sp"
        />
</android.support.constraint.ConstraintLayout>